--- a/TP4/src/app/components/atoms/tab-multimedia/tab-multimedia.component.html
+++ b/TP4/src/app/components/atoms/tab-multimedia/tab-multimedia.component.html
@@ -10,7 +10,7 @@
     <img
       class="img-video"
       *ngIf="id == 26"
-      src="assets/images/puzzle/parallaxvideo.jpg"
+      src="assets/images/puzzle/parallaxvideo.png"
       alt="video"
     />
     <img
@@ -24,12 +24,6 @@
 <div class="multimedia">
   <p>Imágenes</p>
   <div class="multimedia-container">
-    <!--<app-icon
-            *ngIf="id == 21"
-            (click)="scrollLeft(scrollTarget)"
-            class="arrow-scroll arrow-scroll-left"
-            name="arrow-left"
-          ></app-icon>-->
     <div #scrollTarget class="multimedia-flex">
       <div class="image_one">
         <img
@@ -39,7 +33,7 @@
         />
         <img
           *ngIf="id == 26"
-          src="assets/images/puzzle/parallaxmultimedia1.jpg"
+          src="assets/images/puzzle/parallaxmultimedia1.png"
           alt="video"
         />
         <img
@@ -56,7 +50,7 @@
         />
         <img
           *ngIf="id == 26"
-          src="assets/images/puzzle/parallaxmultimedia2.jpg"
+          src="assets/images/puzzle/parallaxmultimedia2.png"
           alt="video"
         />
         <img
@@ -73,7 +67,7 @@
         />
         <img
           *ngIf="id == 26"
-          src="assets/images/puzzle/parallaxmultimedia3.jpg"
+          src="assets/images/puzzle/parallaxmultimedia3.png"
           alt="video"
         />
         <img
@@ -90,7 +84,7 @@
         />
         <img
           *ngIf="id == 26"
-          src="assets/images/puzzle/parallaxmultimedia4.jpg"
+          src="assets/images/puzzle/parallaxmultimedia4.png"
           alt="video"
         />
         <img
@@ -107,11 +101,5 @@
         />
       </div>
     </div>
-    <!-- <app-icon
-            *ngIf="id == 21"
-            (click)="scrollRight(scrollTarget)"
-            class="arrow-scroll arrow-scroll-right"
-            name="arrow-right"
-          ></app-icon>-->
   </div>
 </div>
