Improved character selection

--- a/TP4/src/app/components/pages/for-playing/for-playing.component.html
+++ b/TP4/src/app/components/pages/for-playing/for-playing.component.html
@@ -30,7 +30,7 @@
     <app-game-connect-four *ngIf="game!.id == 21"></app-game-connect-four>
     <app-game-parallax
       *ngIf="game!.id == 26"
-      [gameStart]="gameIsPlaying"
+      [gameStartInput]="gameIsPlaying"
     ></app-game-parallax>
     <div
       class="opacity"
