--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.css
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.css
@@ -106,6 +106,38 @@
   font-weight: 700;
 }
 
+.choose-character h1 {
+  font-family: 'Creepster', cursive;
+}
+
+.choose-character {
+  z-index: 20;
+  position: absolute;
+  width: 500px;
+  /* height: 300px; */
+  background-color: #061539;
+  display: flex;
+  top: 144px;
+  left: 250px;
+  flex-direction: column;
+  gap: 20px;
+  padding-bottom: 30px;
+  align-items: center;
+  border-radius: 20px;
+  box-shadow: var(--elevation-16dp);
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+}
+
+.container-img-character {
+  width: calc(856px / 8);
+  overflow: hidden;
+}
+
 .opacity {
   position: absolute;
   background-color: var(--black);
@@ -124,21 +156,39 @@
   z-index: 11;
 }
 
-.walk {
+.walk1 {
   width: calc(856px / 8);
   background: url('../../../../../assets/images/parallax/character-walk.png');
   animation: walk 1.2s steps(8) infinite;
 }
 
-.jump {
+.walk2 {
+  width: calc(856px / 8);
+  background: url('../../../../../assets/images/parallax/character2-walk.png');
+  animation: walk 1.2s steps(8) infinite;
+}
+
+.jump1 {
   width: calc(910px / 10);
   background: url('../../../../../assets/images/parallax/character-jump.png');
   animation: jump 1.8s steps(10) 1;
 }
 
-.die {
+.jump2 {
+  width: calc(910px / 10);
+  background: url('../../../../../assets/images/parallax/character2-jump.png');
+  animation: jump 1.8s steps(10) 1;
+}
+
+.die1 {
   width: calc(1363px / 10);
   background: url('../../../../../assets/images/parallax/character-die.png');
+  animation: die 1.8s steps(9) 1 forwards;
+}
+
+.die2 {
+  width: calc(1363px / 10);
+  background: url('../../../../../assets/images/parallax/character2-die.png');
   animation: die 1.8s steps(9) 1 forwards;
 }
 
