--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
@@ -14,6 +14,7 @@
       <img src="/assets/images/parallax/gem-yellow.png" alt="" />
     </div>
     <span>{{ score }}</span>
+    <span>-{{ zombiesInGame.length }}</span>
   </div>
 
   <div *ngIf="!gameStart" class="choose-character">
