--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
@@ -27,17 +27,17 @@
       <div class="container-img-character">
         <img
           (click)="changeCharacter(1)"
-          src="assets/images/parallax/character-walk.png"
+          src="assets/images/parallax/character1choose.png"
           alt="pj1"
-          [class.algunaclase]="characterSelected == 1"
+          [class.chosenCharacter]="characterSelected == 1"
         />
       </div>
       <div class="container-img-character">
         <img
           (click)="changeCharacter(2)"
-          src="assets/images/parallax/character2-walk.png"
+          src="assets/images/parallax/character2choose.png"
           alt="pj2"
-          [class.algunaclase]="characterSelected == 2"
+          [class.chosenCharacter]="characterSelected == 2"
         />
       </div>
     </div>
