--- a/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
+++ b/TP4/src/app/components/pages/playing/game-parallax/game-parallax.component.html
@@ -53,6 +53,16 @@
   <div class="layer layer-3" [class.paused]="gameOver || !gameStart"></div>
   <div class="layer layer-2" [class.paused]="gameOver || !gameStart"></div>
   <div class="layer layer-1" [class.paused]="gameOver || !gameStart"></div>
+  <img
+    class="img-jump"
+    src="assets/images/parallax/character-jump.png"
+    alt=""
+  />
+  <img
+    class="img-jump"
+    src="assets/images/parallax/character2-jump.png"
+    alt=""
+  />
   <div
     id="character"
     class="character"
